# example-buf-python

./: .gitignore  Dockerfile  Readme.md  buf.gen.yaml  buf.work.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __main__.py  greeter_client.py
protos/hello_api/: buf.yaml
protos/hello_api/hello/v1/: hello.proto
